# bevy_light2d

./: Cargo.toml  a.js  a.py
src/: blend_style.rs  lib.rs  light_2d.rs  main.rs
src/render/: light.rs  light.wgsl  mod.rs  overlay.rs  overlay.wgsl  shadow.rs  shadow.wgsl
